<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layFundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/tbtnBotao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:id="@+id/txtvToggleButton"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_off" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etxtEditText"
                    android:layout_width="326dp"
                    android:layout_span="2"
                    android:enabled="true"
                    android:hint="@string/etxtHint"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtBemVindo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_span="2"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3E3E3E"
                android:minHeight="2dp">

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/atxtAutoComplete"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/atxtAutoComplete" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnAdicionarClick"
                android:text="@string/btnAdicionar" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spnSpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <TextView
            android:id="@+id/txtRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRadio"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radVermelho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioVermelho" />

            <RadioButton
                android:id="@+id/radVerde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radVerde" />

            <RadioButton
                android:id="@+id/radAzul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radAzul" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>