<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navegando">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLegado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLegado"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recLista"
            android:layout_width="match_parent"
            android:layout_height="77dp" >

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/txtListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtListView"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/lisListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSegure"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPopup" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>